--- a/cipherSpringAPP/src/main/resources/application.properties
+++ b/cipherSpringAPP/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/SpringApp
 spring.datasource.username=postgres
 spring.datasource.password=superadmin
 spring.datasource.driver-class-name=org.postgresql.Driver
